Bug-fixes en aanpassingen aan code om het netter te maken/minder code nodig. + wat extra mogelijkheden zoals boekenlijst van een gebruiker boek voor boek te retourneren en te zien wie een boek hebben geleend

--- a/KillerApp SE/Views/Boeken/MijnBoeken.cshtml
+++ b/KillerApp SE/Views/Boeken/MijnBoeken.cshtml
@@ -44,7 +44,7 @@
                 @Html.DisplayFor(modelItem => boek.Uitgever)
             </td>
             <td>
-                @Html.ActionLink("Breng terug", "RetourBoek", new { id = boek.Titel }) <br />
+                @Html.ActionLink("Breng terug", "RetourBoek", new { id = boek.Titel, gebruiker = ViewBag.Gebruiker }) <br />
             </td>
         </tr>
     }
