--- a/KillerApp SE/Views/Boeken/GetBoekenLijst.cshtml
+++ b/KillerApp SE/Views/Boeken/GetBoekenLijst.cshtml
@@ -81,10 +81,26 @@
                                 }
                             }
                         }
+                        if (bib.GetStatus(Session["Gebruikernaam"].ToString()) == "Admin" && boek.AantalBeschikbaar < boek.AantalExemplaren)
+                        {
+                            <div class="btn-group">
+                                <a href="#" class="btn btn-default">Geleend door</a>
+                                <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    @foreach (Gebruiker g in bib.GetGebruikersLijst())
+                                    {
+                                        if (bib.ZoekMijnBoekenLijst(g.Gebruikernaam, boek.Titel) == true)
+                                        {
+                                            <li>@Html.ActionLink(g.Naam, "WijzigGegevens", "Gebruikers", new { id = g.Gebruikernaam }, new { controller = "Gebruikers" })</li>
+                                        }
+                                    }
+                                </ul>
+                            </div>
+                        }
                     }
                     else
                     {
-                        @Html.ActionLink("Log in om te lenen", "login", "Inlog")
+                        @Html.ActionLink("Log in om te lenen", "login", "Home")
                     }
                 </td>
             </tr>
