--- a/KillerApp SE/Views/Gebruikers/GebruikerBeheren.cshtml
+++ b/KillerApp SE/Views/Gebruikers/GebruikerBeheren.cshtml
@@ -31,6 +31,9 @@
                 @Html.DisplayNameFor(model => model.Geboortedatum)
             </th>
             <th>
+                @Html.DisplayName("Aantal boeken")
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Status)
             </th>
             <th></th>
@@ -49,6 +52,9 @@
                     @Html.DisplayFor(modelItem => gebruiker.Geboortedatum)
                 </td>
                 <td>
+                    @Html.DisplayName(Convert.ToString(bib.GetMijnBoeken(gebruiker.Gebruikernaam).Count))
+                </td>
+                <td>
                     @Html.DisplayFor(modelItem => gebruiker.Status)
                 </td>
                 <td>
@@ -59,7 +65,7 @@
                             <li>@Html.ActionLink("Wijzig", "WijzigGegevens", new { id = gebruiker.Gebruikernaam })</li>
                             @if (bib.GetMijnBoeken(gebruiker.Gebruikernaam).Count > 0 && bib.GetStatus(gebruiker.Gebruikernaam) != "Admin")
                             {
-                                <li>@Html.ActionLink("Boekenlijst", "GetBoekenGebruiker", new { id = gebruiker.Gebruikernaam })</li>
+                                <li>@Html.ActionLink("Boekenlijst", "MijnBoeken", "Boeken", new { id = gebruiker.Gebruikernaam }, new { controller = "Gebruikers" })</li>
                             }
                             @if (Session["Gebruikernaam"].ToString() != gebruiker.Gebruikernaam)
                             {
