--- a/KillerApp SE/Views/Gebruikers/GebruikerBeheren.cshtml
+++ b/KillerApp SE/Views/Gebruikers/GebruikerBeheren.cshtml
@@ -4,12 +4,9 @@
 @{
     ViewBag.Title = "GebruikerBeheren";
 }
-@{
-    Bibliotheek bib = new Bibliotheek();
-}
 
 <center>
-    <h2>Gebruikers Beheren</h2>
+    <h2>Gebruikersbeheer</h2>
 
     <center>
         <font color="Green"><b>@ViewBag.Message</b></font>
@@ -39,7 +36,7 @@
             <th></th>
         </tr>
 
-        @foreach (var gebruiker in (List<Gebruiker>)ViewData["gebruikers"])
+        @foreach (var gebruiker in Bibliotheek.Gebruikers)
         {
             <tr>
                 <td>
@@ -52,7 +49,7 @@
                     @Html.DisplayFor(modelItem => gebruiker.Geboortedatum)
                 </td>
                 <td>
-                    @Html.DisplayName(Convert.ToString(bib.GetMijnBoeken(gebruiker.Gebruikernaam).Count))
+                    @Html.DisplayName(Convert.ToString(Bibliotheek.GetGebruiker(gebruiker.Gebruikernaam).Boeken.Count))
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => gebruiker.Status)
@@ -63,17 +60,13 @@
                         <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Wijzig", "WijzigGegevens", new { id = gebruiker.Gebruikernaam })</li>
-                            @if (bib.GetMijnBoeken(gebruiker.Gebruikernaam).Count > 0 && bib.GetStatus(gebruiker.Gebruikernaam) != "Admin")
+                            @if (Bibliotheek.GetGebruiker(gebruiker.Gebruikernaam).Boeken.Count > 0 && Bibliotheek.GetGebruiker(gebruiker.Gebruikernaam).Status != "Admin")
                             {
                                 <li>@Html.ActionLink("Boekenlijst", "MijnBoeken", "Boeken", new { id = gebruiker.Gebruikernaam }, new { controller = "Gebruikers" })</li>
                             }
                             @if (Session["Gebruikernaam"].ToString() != gebruiker.Gebruikernaam)
                             {
                                 <li>@Html.ActionLink("Verwijder gebruiker", "VerwijderGebruiker", new { id = gebruiker.Gebruikernaam }, new { @style = "color: Red" })</li>
-                            }
-                            @if (bib.GetMijnBoeken(gebruiker.Gebruikernaam).Count > 0)
-                            {
-                                <li>@Html.ActionLink("Retour boeken", "RetourBoekenGebruiker", new { id = gebruiker.Gebruikernaam }, new { @style = "color: Green" })</li>
                             }
                         </ul>
                     </div>             
