--- a/KillerApp SE/Views/Gebruikers/GebruikerToevoegen.cshtml
+++ b/KillerApp SE/Views/Gebruikers/GebruikerToevoegen.cshtml
@@ -1,15 +1,11 @@
 ﻿@model KillerApp_SE.Models.Gebruiker
 
-@{
-    ViewBag.Title = "GebruikerToevoegen";
-}
-
 <h2 style="margin-left: 425px; margin-bottom: 50px">Gebruiker Toevoegen</h2>
 
 @using (Html.BeginForm())
 {
-    <div style="margin-left: 438px; color:green"><b>@ViewBag.Message</b></div>
-    <div style="margin-left: 465px; color:red"><b>@ViewBag.Warning</b></div>
+    <center><div style="color:green">@ViewBag.Message</div></center>
+    <center><div style="color:red">@ViewBag.Warning</div></center>
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal" style="margin-left: 280px;">
@@ -25,7 +21,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Wachtwoord, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Wachtwoord, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Wachtwoord, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
                 @Html.ValidationMessageFor(model => model.Wachtwoord, "", new { @class = "text-danger" })
             </div>
         </div>
