--- a/KillerApp SE/Views/Home/Login.cshtml
+++ b/KillerApp SE/Views/Home/Login.cshtml
@@ -20,7 +20,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Gebruikernaam, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Gebruikernaam, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Gebruikernaam, new { htmlAttributes = new { @class = "form-control", placeholder = "Gebruikersnaam" } })
                 @Html.ValidationMessageFor(model => model.Gebruikernaam, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -28,7 +28,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Wachtwoord, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Wachtwoord, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Wachtwoord, new { htmlAttributes = new { @class = "form-control", placeholder = "Wachtwoord", @type = "password" } })
                 @Html.ValidationMessageFor(model => model.Wachtwoord, "", new { @class = "text-danger" })
             </div>
         </div>
